manifests/user/miniflux/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app: miniflux
spec:
  replicas: 2
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: app
          image: miniflux/miniflux:2.0.51
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 64Mi
---
kind: Service
apiVersion: v1
metadata:
  name: miniflux-svc
  namespace: miniflux
spec:
  selector:
    app: miniflux
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux-ingress
  namespace: miniflux
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
    - host: news.bence.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: miniflux-svc
                port:
                  number: 8080
